# mostlyfutures.org

./: .env.example  .gitignore  .mcp.json  AI-AGENT-README.md  CNAME  CRYPTO_DASHBOARD_README.md  QUICKSTART.md  QWEN.md  README_BLOG.md  ai-chatbot.html  components.json  crypto-intro.html  grant-ai.html  index.html  index2.html  index3.html  index4.html  index5.html  package-lock.json  quizgen.html  readme.md  setup-ai-agent.sh  style.css  svelte.config.js  tailwind.config.js  trading-intro.html  vitest.config.ts  zchat.html
.claude/prp-core/: README.md
.github/: copilot-instructions.md
.github/instructions/: Archon.instructions.md
.github/workflows/: deploy.yml
.qwen/: QWEN.md  settings.json
.qwen/PRPs/: crypto-analytics-dashboard.md  local-rag-agentic-workflow.md
PRPs/: story_debug-critical-errors.md
PRPs/code_reviews/: review1.md  (+1 more)
Saas_Template/: package-lock.json
html_mostlyfutures/: landing.html  trading-intro.html
korah_tools/: INITIAL.md  Korah.md
mf-dex_react/: replit.md
mf-react/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
mf-svelte/: .eslintrc.cjs  CLAUDE.md  CONTENT_GUIDE.md  README.md  README_SAAS.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
mfExplore/: ai-chatbot.html  contact.html  landing.html  nfts.html  trading-intro.html
mfSart/: landing.html
mostlyfutures/: package.json
src/: app.html
svelte-agent/: .env  README.md  pyproject.toml  sveltekit_editor_agent.py
zContexts/: data_aggragation_impementation.md  ui_example.md
(+180 files in other folders)
